--- a/contact.html
+++ b/contact.html
@@ -74,13 +74,9 @@
                     <p>미친코딩살육머신을 가질 수 있는 마지막 기회</p>
                     <p>미친코딩살육머신을 가질 수 있는 마지막 기회</p>
                     <p>미친코딩살육머신을 가질 수 있는 마지막 기회</p>
-                    <p>미친코딩살육머신을 가질 수 있는 마지막 기회</p>
-                    <p>미친코딩살육머신을 가질 수 있는 마지막 기회</p>
                 </div>
 
                 <div class="contact">
-                    <p>CONTACT ME</p>
-                    <p>CONTACT ME</p>
                     <p>CONTACT ME</p>
                     <p>CONTACT ME</p>
                     <p>CONTACT ME</p>
@@ -91,18 +87,18 @@
                     <p>명품과 희주 임금은 지금이 제일 싸다</p>
                     <p>명품과 희주 임금은 지금이 제일 싸다</p>
                     <p>명품과 희주 임금은 지금이 제일 싸다</p>
-                    <p>명품과 희주 임금은 지금이 제일 싸다</p>
-                    <p>명품과 희주 임금은 지금이 제일 싸다</p>
                 </div>
             </div>
             <ul class="info">
                 <li>
                     <p>PHONE.</p>
                     <strong>010-2679-2914</strong>
+                    <i>복사되었습니다!</i>
                 </li>
                 <li>
                     <p>EMAIL.</p>
                     <strong>heehappyjoo@gmail.com</strong>
+                    <i>복사되었습니다!</i>
                 </li>
             </ul>
         </main>
