projects css done

--- a/heejoo.html
+++ b/heejoo.html
@@ -20,7 +20,7 @@
     </head>
     <body>
         <!-- MEGA menu -->
-        <section class="mega-menu">
+        <div class="mega-menu">
             <div id="canvas-container"></div>
             <div class="text-container">
                 <div class="text-element logo">
@@ -55,7 +55,7 @@
                 <div class="text-element line-deco badge3">오늘도 <b>원</b> 받음!!!</div>
                 <div class="text-element stroke"><img src="./img/hell-menu-stroke.png" alt="프로젝트 리스트" /></div>
             </div>
-        </section>
+        </div>
         <!-- e: MEGA menu -->
         <header>
             <nav>
