--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
         <link rel="stylesheet" href="./css/reset.css" />
         <link rel="stylesheet" href="./css/common.css" />
+        <link rel="stylesheet" href="./css/hell-common.css" />
         <link rel="stylesheet" href="./css/main.css" />
 
         <!-- JQuery -->
@@ -34,11 +35,13 @@
                 <div class="text-element menu name"><a href="./heejoo.html">정희주</a></div>
                 <div class="text-element menu contact"><a href="./contact.html">컨텍</a></div>
                 <div class="text-element menu project"><a href="./projects.html">프로젝트</a></div>
-                <div class="text-element menu-projectsub micro"><a href="#">마이크로사이트</a></div>
-                <div class="text-element menu-projectsub web"><a href="#">웹디자인</a></div>
-                <div class="text-element menu-projectsub banner"><a href="#">배너디자인</a></div>
-                <div class="text-element menu-projectsub app"><a href="#">앱디자인</a></div>
-                <div class="text-element menu-projectsub other"><a href="#">외</a></div>
+                <div class="text-element menu-projectsub micro">
+                    <a href="projects.html#micro-site">마이크로사이트</a>
+                </div>
+                <div class="text-element menu-projectsub web"><a href="projects.html#web">웹디자인</a></div>
+                <div class="text-element menu-projectsub banner"><a href="projects.html#banner">배너디자인</a></div>
+                <div class="text-element menu-projectsub app"><a href="projects.html#app">앱디자인</a></div>
+                <div class="text-element menu-projectsub other"><a href="projects.html#other">외</a></div>
                 <div class="text-element line line1">신입특) 객기부림👎👎👎</div>
                 <div class="text-element line line2">근데 희주 ;</div>
                 <div class="text-element line line3">자아없음 모드 ON🤓👍</div>
@@ -85,7 +88,9 @@
                 <img src="./img/hell-joo-임시.png" alt="주" />
             </div>
 
-            <div class="process chrome"><img src="./img/hell-process-임시.png" alt="프로세스" /></div>
+            <div class="process chrome">
+                <a href="./projects.html#portfolio-process"><img src="./img/hell-process-임시.png" alt="프로세스" /></a>
+            </div>
 
             <div class="wandoo chrome"><img src="./img/hell-wandoo-임시.png" alt="완두" /></div>
 
@@ -142,15 +147,13 @@
                     </div>
                 </section>
                 <section class="process">
-                    <a href="#">
-                        <h2>PROCESS</h2>
-                        <div class="popup-text">
-                            <dl>
-                                <dt>PORTFOLIO.</dt>
-                                <dd>H34V3N vs H311</dd>
-                            </dl>
-                        </div>
-                    </a>
+                    <h2>PROCESS</h2>
+                    <div class="popup-text">
+                        <dl>
+                            <dt>PORTFOLIO.</dt>
+                            <dd>H34V3N vs H311</dd>
+                        </dl>
+                    </div>
                 </section>
                 <section class="wandoo">
                     <h2>WANDOO</h2>
