--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <!-- matter.js -->
         <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/matter-js/0.19.0/matter.min.js"></script> -->
         <!-- GSAP -->
-        <!-- <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.7/dist/gsap.min.js"></script> -->
+        <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.7/dist/gsap.min.js"></script>
 
         <!-- <script src="./js/megaMenu.js"></script> -->
         <!-- <script src="./js/hell-main.js"></script> -->
@@ -103,15 +103,85 @@
                 <div class="wandoo chrome"><img src="./img/hell-wandoo-임시.png" alt="완두" /></div>
             </div>
 
-            <div class="title-wrap heaven">
-                <strong class="portfolio">PORTFOLIO</strong>
-                <strong class="mode">MODE</strong>
-                <strong class="heejoo">HEEJOO</strong>
-                <strong class="process">PROCESS</strong>
-                <strong class="wandoo">WANDOO</strong>
+            <div class="heaven grid-wrap">
+                <section class="portfolio">
+                    <h2>PORTFOLIO</h2>
+                    <div class="behind">
+                        <dl>
+                            <dt>PERIOD.</dt>
+                            <dd>2024.11 - 2025.04</dd>
+                        </dl>
+                        <dl>
+                            <dt>TOOLS.</dt>
+                            <dd>
+                                <p>Figma</p>
+                                <p>HTML</p>
+                                <p>CSS</p>
+                                <p>JavaScript</p>
+                                <p>JQuery</p>
+                                <p>Photoshop</p>
+                                <p>Illustrator</p>
+                            </dd>
+                        </dl>
+                    </div>
+                </section>
+                <section class="mode">
+                    <h2>MODE</h2>
+                    <div class="behind">
+                        <dl>
+                            <dt class="heaven">TO HELL.</dt>
+                            <dd class="heaven">
+                                정적인 분위기가 지루하시다면, <br />
+                                토글을 눌러 헬모드를 이용해보세요.
+                            </dd>
+                        </dl>
+                    </div>
+                </section>
+                <section class="heejoo">
+                    <h2>HEEJOO</h2>
+                    <div class="behind">
+                        <div class="left">
+                            <dl>
+                                <dt>NAME.</dt>
+                                <dd>정희주</dd>
+                            </dl>
+                            <dl>
+                                <dt>BIRTH.</dt>
+                                <dd>1997. 09. 04</dd>
+                            </dl>
+                        </div>
+                        <div class="right">
+                            <dl>
+                                <dt>PHONE.</dt>
+                                <dd>010.2679.2914</dd>
+                            </dl>
+                            <dl>
+                                <dt>EMAIL.</dt>
+                                <dd>heehappyjoo@gmail.com</dd>
+                            </dl>
+                        </div>
+                    </div>
+                </section>
+                <section class="process">
+                    <h2>PROCESS</h2>
+                    <div class="behind">
+                        <a href="./projects.html#portfolio">
+                            <dl>
+                                <dt>PORTFOLIO.</dt>
+                                <dd>H34V3N vs H311</dd>
+                            </dl>
+                        </a>
+                    </div>
+                </section>
+                <section class="wandoo">
+                    <h2>WANDOO</h2>
+                    <div class="behind">
+                        <video src="" autoplay muted loop>고양이 완두에게 냥냥펀치를 맞아보세요</video>
+                    </div>
+                </section>
             </div>
 
-            <div class="popup">
+            <div class="popup hell">
                 <section class="portfolio">
                     <h2>PORTFOLIO</h2>
                     <div class="popup-text">
@@ -138,18 +208,13 @@
                     <div class="popup-text">
                         <dl>
                             <dt class="hell">TO HEAVEN.</dt>
-                            <dt class="heaven">TO HELL.</dt>
                             <dd class="hell">천국가기</dd>
-                            <dd class="heaven">
-                                정적인 분위기가 지루하시다면, <br />
-                                토글을 눌러 헬모드를 이용해보세요.
-                            </dd>
                         </dl>
                     </div>
                 </section>
                 <section class="heejoo">
                     <h2>HEEJOO</h2>
-                    <div class="popup-text hell">
+                    <div class="popup-text">
                         <dl>
                             <dt>NAME.</dt>
                             <dd>정희주</dd>
@@ -167,28 +232,6 @@
                             <dd>heehappyjoo@gmail.com</dd>
                         </dl>
                     </div>
-                    <div class="popup-text heaven">
-                        <div class="left">
-                            <dl>
-                                <dt>NAME.</dt>
-                                <dd>정희주</dd>
-                            </dl>
-                            <dl>
-                                <dt>BIRTH.</dt>
-                                <dd>1997. 09. 04</dd>
-                            </dl>
-                        </div>
-                        <div class="right">
-                            <dl>
-                                <dt>PHONE.</dt>
-                                <dd>010.2679.2914</dd>
-                            </dl>
-                            <dl>
-                                <dt>EMAIL.</dt>
-                                <dd>heehappyjoo@gmail.com</dd>
-                            </dl>
-                        </div>
-                    </div>
                 </section>
                 <section class="process">
                     <h2>PROCESS</h2>
@@ -199,6 +242,7 @@
                         </dl>
                     </div>
                 </section>
+
                 <section class="wandoo">
                     <h2>WANDOO</h2>
                     <video src="" autoplay muted loop>고양이 완두에게 냥냥펀치를 맞아보세요</video>
